--- a/clie/MainWindow.xaml
+++ b/clie/MainWindow.xaml
@@ -7,8 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Margin="0,0,2,0">
-        <Button x:Name="msg" Content="Button" HorizontalAlignment="Left" Margin="61,38,0,0" VerticalAlignment="Top" Width="75" Click="msg_Click"/>
-        <ListBox x:Name="list" HorizontalAlignment="Left" Height="228" Margin="352,67,0,0" VerticalAlignment="Top" Width="290"/>
+        <Button x:Name="bt" Content="Добавить" HorizontalAlignment="Left" Margin="120,312,0,0" VerticalAlignment="Top" Width="114" Click="msg_Click" Height="29"/>
+        <ListBox x:Name="list" HorizontalAlignment="Left" Height="228" Margin="398,77,0,0" VerticalAlignment="Top" Width="290"/>
+        <TextBox x:Name="tb" HorizontalAlignment="Left" Height="132" Margin="48,158,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="328" Text="Введите строку"/>
+        <Button x:Name="con" Content="Подключить" HorizontalAlignment="Left" Height="50" Margin="48,50,0,0" VerticalAlignment="Top" Width="102"/>
+        <Button x:Name="dis" Content="Отключить" HorizontalAlignment="Left" Height="50" Margin="190,50,0,0" VerticalAlignment="Top" Width="102"/>
 
     </Grid>
 </Window>
